# mailinglistconfirm

./: .hgignore  LICENSE  mailinglistconfirm.cabal  schema.sql
src/: ConfirmCgi.hs  FillDatabase.hs
